# libkolibre-narrator

./: Makefile.am  README  README.md  configure.ac  doxygen.cfg.in  libkolibre-narrator.pc.in
prompts/: en_translations.csv  fi_translations.csv  narrator.csv  sk_translations.csv  sv_translations.csv  types.csv
src/: AudioStream.h  AudioSystem.h  AudioSystemApi.h.in  Db.cpp  Db.h  Filter.cpp  Filter.h  Makefile.am  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  Mp3Stream.cpp  Mp3Stream.h  Narrator.cpp  Narrator.h  OggStream.cpp  OggStream.h  PortAudio.cpp  PortAudio.h  PulseAudio.cpp  PulseAudio.h  RingBuffer.cpp  RingBuffer.h
tests/: Makefile.am  basicsay.cpp  basicsay.sh  dbtest.cpp  dbtest.sh  interfacetest.cpp  interfacetest.sh  monostereo.sh  playfile.cpp  playfile.sh  ringbuffer.cpp  samplerate.cpp  samplerate.sh  setup_logging.h  stress_test.cpp  stress_test.sh
utils/: Audio.py  Makefile.am  Message.py  Parameter.py  TODO  Translation.py  build_message_db.py  configure.ac  csvparser.py  messagehelper.py  narrator-utils.in
